# COMP10050_Assignment_2

./: .gitignore  CMakeLists.txt  README.md  constants.h  main.c  structs.h  twitter_create.c  twitter_create.h
helpers/: feed_helpers.c  feed_helpers.h  helpers.c  helpers.h  twitter_helpers.c  twitter_helpers.h
lib/display/: display.c  display.h  display_users.c
lib/twitter_create/: twitter_create.c  twitter_create.h
lib/twitter_functions/: delete.c  delete.h  follow.c  follow.h  get_news_feed.c  get_news_feed.h  post.c  post.h  twitter_functions.c  twitter_functions.h  unfollow.c  unfollow.h
utils/: constants.h  display_users.c  display_users.h  helpers.c  helpers.h  structs.h  twitter_helpers.c  twitter_helpers.h
